--- a/QLDSV_TC/QLDSV_TC.csproj
+++ b/QLDSV_TC/QLDSV_TC.csproj
@@ -52,6 +52,7 @@
     <Reference Include="DevExpress.XtraEditors.v19.2" />
     <Reference Include="DevExpress.XtraGauges.v19.2.Core, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraReports.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraReports.v19.2.Extensions, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -80,11 +81,35 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DS_HP.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FormMonH.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMonH.Designer.cs">
+      <DependentUpon>FormMonH.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDK.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDK.Designer.cs">
+      <DependentUpon>FrmDK.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmHocPhi.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmHocPhi.Designer.cs">
       <DependentUpon>frmHocPhi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmLopHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLopHoc.Designer.cs">
+      <DependentUpon>frmLopHoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmLopTinC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLopTinC.Designer.cs">
+      <DependentUpon>FrmLopTinC.cs</DependentUpon>
     </Compile>
     <Compile Include="frmNhapDiem.cs">
       <SubType>Form</SubType>
@@ -103,6 +128,18 @@
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSinhVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSinhVien.Designer.cs">
+      <DependentUpon>frmSinhVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmTaoTaiKhoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTaoTaiKhoan.Designer.cs">
+      <DependentUpon>FrmTaoTaiKhoan.cs</DependentUpon>
     </Compile>
     <Compile Include="Frpt_HPTheoLop.cs">
       <SubType>Form</SubType>
@@ -123,8 +160,23 @@
       <DependentUpon>Frpt_PhieuDiemSV.cs</DependentUpon>
     </Compile>
     <Compile Include="MoneyConverter.cs" />
+    <Compile Include="Objects\Lop.cs" />
+    <Compile Include="Objects\MonHoc.cs" />
+    <Compile Include="Objects\SinhVien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLDSV_TCDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLDSV_TCDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="QLDSV_TCDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLDSV_TCDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Redo.cs" />
+    <Compile Include="Undo.cs" />
     <Compile Include="Xprt_SP_RP_PD.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -143,14 +195,26 @@
     <Compile Include="Xrpt_SP_RP_DSDHP.Designer.cs">
       <DependentUpon>Xrpt_SP_RP_DSDHP.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FormMonH.resx">
+      <DependentUpon>FormMonH.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDK.resx">
+      <DependentUpon>FrmDK.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHocPhi.resx">
       <DependentUpon>frmHocPhi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNhapDiem.resx">
+      <DependentUpon>frmNhapDiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTaoTaiKhoan.resx">
+      <DependentUpon>FrmTaoTaiKhoan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frpt_HPTheoLop.resx">
       <DependentUpon>Frpt_HPTheoLop.cs</DependentUpon>
@@ -209,6 +273,28 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="QLDSV_TCDataSet.xsc">
+      <DependentUpon>QLDSV_TCDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLDSV_TCDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLDSV_TCDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLDSV_TCDataSet.xss">
+      <DependentUpon>QLDSV_TCDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLDSV_TCDataSet2.xsc">
+      <DependentUpon>QLDSV_TCDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="QLDSV_TCDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLDSV_TCDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLDSV_TCDataSet2.xss">
+      <DependentUpon>QLDSV_TCDataSet2.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
